welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: not found: value second
    second=premier
    ^array667:8: error: not found: value second
    if (second==6 & (premier==6 | premier==7)) double6+=1
        ^